Lab3: added private routes
