# Lab2/pzpi-22-3-shut-oleksandr-lab2/src/modules/auth/auth.controller.ts
@@ -1,6 +1,6 @@
 import { AuthService } from './auth.service'
-import { Body, Controller, HttpCode, HttpStatus, Post, Req, Res, UsePipes } from '@nestjs/common'
-import { ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger'
+import { Body, Controller, Get, HttpCode, HttpStatus, Post, Req, Res, UseGuards, UsePipes } from '@nestjs/common'
+import { ApiBearerAuth, ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger'
 import { ValidationPipe } from '../../pipes/validation.pipe'
 import { CreateUserDto } from '../users/dto/create-user.dto'
 import { Response, Request } from 'express'
@@ -11,11 +11,23 @@ import { UpdatePasswordResponseDto } from './dto/update-password-response.dto'
 import { UpdatePasswordReqDto } from './dto/update-password-req.dto'
 import { ResetPasswordResponseDto } from './dto/reset-password-response.dto'
 import { ResetPasswordReqDto } from './dto/reset-password-req.dto'
+import { JwtAuthGuard } from './jwt-auth.guard'
+import { User } from '../users/users.schema'
 
 @ApiTags('auth')
 @Controller('auth')
 export class AuthController {
   constructor(private readonly authService: AuthService) {}
+
+  @ApiOperation({ summary: 'auth me checker' })
+  @ApiResponse({ status: 200 })
+  @UseGuards(JwtAuthGuard)
+  @Get('/auth-me')
+  @ApiBearerAuth()
+  @HttpCode(HttpStatus.OK)
+  async authMe(@Req() req: Request): Promise<User> {
+    return this.authService.authMe(req)
+  }
 
   @ApiOperation({ summary: 'user login' })
   @ApiResponse({ status: 200, type: LoginResponseDto })
@@ -83,5 +95,19 @@ export class AuthController {
       sameSite: 'strict',
     })
     res.send({ message: 'Token updated', token: { accessToken } })
+  }
+
+  @ApiOperation({ summary: 'Logout user' })
+  @ApiResponse({ status: 200, description: 'Successfully logged out' })
+  @Post('/logout')
+  @HttpCode(HttpStatus.OK)
+  logout(@Res() res: Response): void {
+    res.clearCookie('accessToken', {
+      httpOnly: true,
+      secure: process.env.NODE_ENV === 'production',
+      sameSite: 'strict',
+    })
+
+    res.send({ message: 'Logged out successfully' })
   }
 }
