# Lab2/pzpi-22-3-shut-oleksandr-lab2/swagger.json
@@ -386,6 +386,26 @@
         ]
       }
     },
+    "/api/auth/auth-me": {
+      "get": {
+        "operationId": "AuthController_authMe",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "summary": "auth me checker",
+        "tags": [
+          "auth"
+        ]
+      }
+    },
     "/api/auth/login": {
       "post": {
         "operationId": "AuthController_login",
@@ -531,6 +551,21 @@
           }
         },
         "summary": "refresh access token",
+        "tags": [
+          "auth"
+        ]
+      }
+    },
+    "/api/auth/logout": {
+      "post": {
+        "operationId": "AuthController_logout",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Successfully logged out"
+          }
+        },
+        "summary": "Logout user",
         "tags": [
           "auth"
         ]
